Update scenarios